cmake_minimum_required(VERSION 3.17)

project(AOC2025 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(01_1 src/01_1.cpp)
add_executable(01_2 src/01_2.cpp)
add_executable(02_1 src/02_1.cpp)
add_executable(02_2 src/02_2.cpp)
add_executable(03_1 src/03_1.cpp)
add_executable(03_2 src/03_2.cpp)
add_executable(04_1 src/04_1.cpp)
add_executable(04_2 src/04_2.cpp)
